--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,13 +10,10 @@
 <body>
     <header>
         <div class="header-container">
-            <nav>
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a>
-            </nav>
             <div class="logo">
-                <img src="images/logo.png" alt="Logo" class="logo-img" onerror="this.src='https://via.placeholder.com/150x150?text=Fallback+Logo';">
+                <a href="#home">
+                    <img src="images/logo.png" alt="Logo" class="logo-img" onerror="this.src='https://via.placeholder.com/150x150?text=Fallback+Logo';">
+                </a>
             </div>
         </div>
     </header>
@@ -51,6 +47,7 @@
 
     <footer>
         <p>© 2025 Travel Itinerary Planner. All rights reserved.</p>
+        <p>Contact: <a href="mailto:contact@travelbit.ai">contact@travelbit.ai</a></p>
     </footer>
 </body>
 </html>
