--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Plan your dream trip with a personalized travel itinerary using Travel Itinerary Planner.">
+    <meta name="keywords" content="travel, itinerary, planner, vacation, dream holiday">
+    <meta name="author" content="TravelBit.AI">
     <title>Travel Itinerary Planner</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
@@ -10,15 +14,19 @@
 <body>
     <header>
         <div class="header-container">
+            <nav>
+                <a href="#home">Home</a>
+                <a href="#travel-ideas">Travel Ideas</a>
+            </nav>
             <div class="logo">
-                <a href="#home">
-                    <img src="images/logo.png" alt="Logo" class="logo-img" onerror="this.src='https://via.placeholder.com/150x150?text=Fallback+Logo';">
+                <a href="#home" aria-label="Travel Itinerary Planner Home">
+                    <img src="images/logo.png" alt="Travel Itinerary Planner Logo" class="logo-img" onerror="this.src='https://via.placeholder.com/150x150?text=Fallback+Logo';">
                 </a>
             </div>
         </div>
     </header>
 
-    <div class="hero">
+    <div class="hero" id="home">
         <div class="hero-content">
             <h1>Plan Your Dream Trip</h1>
             <p>Create a personalized itinerary with ease!</p>
@@ -28,20 +36,23 @@
     <main>
         <section id="input-form">
             <h2>Your Dream Holiday</h2>
-            <form id="travel-form">
+            <form id="travel-form" aria-labelledby="input-form-heading">
                 <label for="dream">Tell us about your dream holiday:</label>
-                <textarea id="dream" name="dream" rows="4" required></textarea>
+                <textarea id="dream" name="dream" rows="4" required aria-required="true" placeholder="Describe your dream destination, activities, and preferences..."></textarea>
                 <button type="submit">Generate Itinerary</button>
             </form>
         </section>
 
-        <section id="itinerary-output">
+        <section id="itinerary-output" aria-live="polite">
             <div id="result"></div>
         </section>
 
         <section id="travel-ideas">
             <h2>Travel Ideas</h2>
-            <div id="recent-searches"></div>
+            <div id="recent-searches">
+                <!-- Fallback content if JavaScript fails -->
+                <p>Loading travel ideas... If this message persists, please enable JavaScript or check your connection.</p>
+            </div>
         </section>
     </main>
 
